# MoM-Analysis

./: Directory Structure.md  README.md  app.py  cleaning.ipynb  customer_anaylsis.ipynb  main.py  order_analysis.ipynb  product_analysis.ipynb  pyproject.toml  requirements.txt  settings.py  test.py  tools.py
analysis/: Year Order Item Data.csv  Year Order Item Data.xlsx  customer_analysis.ipynb  order_analysis.ipynb  product_analysis.ipynb
order_analysis/: Product_Co_occurence_Matrix.csv  Product_Co_occurence_Matrix_filtered.csv
prompts/: creative_coupon.txt  miss_you.txt  stamp_card.txt  standard_coupon.txt
results/customer_analysis/: Customer_KPIs_KnownPhonesOnly.csv  Customer_KPIs_KnownPhonesOnly.txt
results/order_analysis/: Invoice_Aggregation.csv
